_old/zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt-ingress
  namespace: zigbee2mqtt
  annotations:
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: wnsrt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "zigbee2mqtt.wnsrt.de"
      secretName: wnsrt

  rules:
    - host: zigbee2mqtt.wnsrt.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-service
                port:
                  number: 8080
